--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="7; url='https://www.w3docs.com'" />
-  </head>
-  <body>
-    <p>Please follow <a href="https://www.w3docs.com">https://filip811.wixsite.com/jaspreet-singh-pf</a>.</p>
-  </body>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "2; url = https://filip811.wixsite.com/jaspreet-singh-pf" />
+   </head>
+   <body>
+      <p>Redirecting to Jaspreet's Portfolio</p>
+   </body>
 </html>
