--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://filip811.wixsite.com/jaspreet-singh-pf" />
    </head>
    <body>
-      <p>Redirecting to Jaspreet's Portfolio</p>
+      <H1>Redirecting to Jaspreet's Portfolio</H1>
    </body>
 </html>
